fix(grid): fxied grid spacing issues

--- a/angular-src/src/app/components/home/home.component.scss
+++ b/angular-src/src/app/components/home/home.component.scss
@@ -34,9 +34,10 @@
 }
 
 .category{
-    width: 88%;
+    color: var(--text-black);
+    width: 100%;
     height: 325px;
-    margin: 20px 10px 10px 20px;
+    // margin: 20px 10px 10px 20px;
     background-color: var(--white-color);
     border-radius: 4px;
     box-shadow: 3px 3px 15px var(--shadow-color);
@@ -44,4 +45,8 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+
+    h3{
+        font-size: 26px;
+    }
 }
