--- a/angular-src/src/app/components/results/results.component.scss
+++ b/angular-src/src/app/components/results/results.component.scss
@@ -35,9 +35,7 @@ p {
     align-content: space-around;
 }
 .search-result{
-    width: 88%;
     height: 325px;
-    margin: 20px 10px 10px 20px;
     background-color: var(--white-color);
     border-radius: 4px;
     box-shadow: 3px 3px 15px var(--shadow-color);
