--- a/angular-src/src/styles.scss
+++ b/angular-src/src/styles.scss
@@ -26,7 +26,9 @@ button{
 .grid-container{
     // border: 1px dashed red;
     display: grid;
-    width: 100%;
+    grid-gap: 30px;
+    // width: 100%;
+    padding: 0px 30px;
 }
 .flex-container{
     // border: 1px dashed blue;
